Completed fight-booking system

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             </div>
         </div>
     </main>
+    <!--Success section-->
     <section id="success-message">
         <h1>Thank you for purchasing the tickets.May you have a great journey.</h1>
     </section>
